gradient box added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="ls">
+    <div class="box">
         <h1>SIDE QUEST SIGNUP</h1>
     </div>
     
