--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--top area-->
     <div class="box">
-        <h1>SIDE QUEST SIGNUP</h1>
+        <h1>SIDEQUEST <input id="searchbar" type="text" placeholder="Search for a job type"> </h1>
+        <img id="dp" src="https://tse2.mm.bing.net/th?id=OIP.yYUwl3GDU07Q5J5ttyW9fQHaHa&pid=Api&P=0&h=220" alt="">
     </div>
+
+    <!--Cover area-->
     
 </body>
 </html>
