left container added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,24 @@
     <div style="display: flex;">
         <div class="left_container">
 
-            
+            Types of job you can work on.
+            <br><br><br>
+            <div class="job_type">
+                <img src="https://image.freepik.com/free-icon/code_318-41701.jpg" alt="code.icon">
+                Programming
+            </div>
+            <div class="job_type">
+                <img src="https://tse2.mm.bing.net/th?id=OIP.XrGVljajcLZhvJGUD-Sc7gHaE7&pid=Api&P=0&h=220" alt="code.icon">
+                Graphic Design
+            </div>
+            <div class="job_type">
+                <img src="https://tse1.mm.bing.net/th?id=OIP.ajOZM5PCqcy_JyffZODgyQHaHa&pid=Api&P=0&h=220" alt="code.icon">
+                Writing
+            </div>
+            <div class="job_type">
+                <img src="https://tse4.mm.bing.net/th?id=OIP.ysDUOUMN8RoN80-L7-fOQQAAAA&pid=Api&P=0&h=220" alt="code.icon">
+                Assignments
+            </div>
 
         </div>
         <div class="center_container">
