--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="menu_buttons">Profile</div>
         <div class="menu_buttons"> WorkSpace</div>
     </div>
-</div>
+    </div>
 
     <!--Cover area-->
     <div class="cover_area">
@@ -33,55 +33,103 @@
             <br>
             <div id="name">Rey Sinabianan</div>
 
-    </div>
-    <br><br>
-    <!--Posting-->
-    <div style="display: flex;">
-        <div class="left_container">
-
-            Types of job you can work on.
-            <br><br><br>
-            <div class="job_type">
-                <img src="https://image.freepik.com/free-icon/code_318-41701.jpg" alt="code.icon">
-                Programming
-            </div>
-            <div class="job_type">
-                <img src="https://tse2.mm.bing.net/th?id=OIP.XrGVljajcLZhvJGUD-Sc7gHaE7&pid=Api&P=0&h=220" alt="code.icon">
-                Graphic Design
-            </div>
-            <div class="job_type">
-                <img src="https://tse1.mm.bing.net/th?id=OIP.ajOZM5PCqcy_JyffZODgyQHaHa&pid=Api&P=0&h=220" alt="code.icon">
-                Writing
-            </div>
-            <div class="job_type">
-                <img src="https://tse4.mm.bing.net/th?id=OIP.ysDUOUMN8RoN80-L7-fOQQAAAA&pid=Api&P=0&h=220" alt="code.icon">
-                Assignments
-            </div>
-
         </div>
-        <!--post area-->
-        <div class="center_container">
+        <br><br>
+        <!--Posting-->
+        <div style="display: flex;">
+            <div class="left_container">
 
-           <div class="post_box">
+                Types of job you can work on.
+                <br><br><br>
+                <div class="job_type">
+                    <img src="https://image.freepik.com/free-icon/code_318-41701.jpg" alt="code.icon">
+                    Programming
+                </div>
+                <div class="job_type">
+                    <img src="https://tse2.mm.bing.net/th?id=OIP.XrGVljajcLZhvJGUD-Sc7gHaE7&pid=Api&P=0&h=220"
+                        alt="code.icon">
+                    Graphic Design
+                </div>
+                <div class="job_type">
+                    <img src="https://tse1.mm.bing.net/th?id=OIP.ajOZM5PCqcy_JyffZODgyQHaHa&pid=Api&P=0&h=220"
+                        alt="code.icon">
+                    Writing
+                </div>
+                <div class="job_type">
+                    <img src="https://tse4.mm.bing.net/th?id=OIP.ysDUOUMN8RoN80-L7-fOQQAAAA&pid=Api&P=0&h=220"
+                        alt="code.icon">
+                    Assignments
+                </div>
 
-            <textarea placeholder="Post a project."></textarea>
-            <input id="post_button" type="submit" value="Post">
+            </div>
+            <!--post area-->
+            <div class="center_container">
 
-           </div>
+                <div class="post_box">
 
-           <div id="post_bar">
+                    <textarea placeholder="Post a project."></textarea>
+                    <input id="post_button" type="submit" value="Post">
 
-            
+                </div>
 
-           </div>
+                <div id="post_bar">
 
-        </div>
-        <!--<div class="right_container">
+                    <div>
+                        <img src="https://tse2.mm.bing.net/th?id=OIP.yYUwl3GDU07Q5J5ttyW9fQHaHa&pid=Api&P=0&h=220"
+                            alt="prof_pic.pg">
+                    </div>
+                    <div id="post_content">
+                        <div id="post_name">Rey Sinabian</div>
+                        <br>
+                        I need help with a JavaScript code that can fetch weather data from an API and display it on a
+                        webpage.
+                        The code should take a city name as input and return the current weather details for that city.
+                        If anyone is available to work on this, please let me know.
+                    </div>
+
+                </div>
+
+                <div id="post_bar">
+
+                    <div>
+                        <img src="https://tse2.mm.bing.net/th?id=OIP.yYUwl3GDU07Q5J5ttyW9fQHaHa&pid=Api&P=0&h=220"
+                            alt="prof_pic.pg">
+                    </div>
+                    <div id="post_content">
+                        <div id="post_name">Rey Sinabian</div>
+                        <br>
+                        I need assistance with an assignment on machine learning. The assignment includes analyzing a
+                        dataset,
+                        implementing various algorithms, and presenting the results. If someone is knowledgeable in ML
+                        and can assist,
+                        please contact me.
+                    </div>
+
+                </div>
+
+                <div id="post_bar">
+
+                    <div>
+                        <img src="https://tse2.mm.bing.net/th?id=OIP.yYUwl3GDU07Q5J5ttyW9fQHaHa&pid=Api&P=0&h=220"
+                            alt="prof_pic.pg">
+                    </div>
+                    <div id="post_content">
+                        <div id="post_name">Rey Sinabian</div>
+                        <br>
+                        I'm looking for a creative designer to create a modern and professional logo for my startup.
+                        The company is called "TechNova" and specializes in tech gadgets. I would like a minimalist and
+                        futuristic design.
+                    </div>
+
+                </div>
+
+            </div>
+            <!--<div class="right_container">
             
 
 
         </div> -->
-    </div>
+        </div>
 </body>
 
 </html>
