--- a/index.html
+++ b/index.html
@@ -1,135 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Side Quest</title>
+    <title>Sign Up </title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <!--top area-->
-    <div class="box">
-        <h1>SIDEQUEST <input id="searchbar" type="text" placeholder="Search for a job type"> </h1>
-        <img id="dp" src="https://tse2.mm.bing.net/th?id=OIP.yYUwl3GDU07Q5J5ttyW9fQHaHa&pid=Api&P=0&h=220" alt="">
-    </div>
 
-
-    <div class="buttons">
-        <div class="menu_buttons">Home</div>
-        <div class="menu_buttons">Profile</div>
-        <div class="menu_buttons"> WorkSpace</div>
-    </div>
-    </div>
-
-    <!--Cover area-->
-    <div class="cover_area">
-
-        <div class="cover_page">
-
-            <img id="prof_pic" src="https://tse2.mm.bing.net/th?id=OIP.yYUwl3GDU07Q5J5ttyW9fQHaHa&pid=Api&P=0&h=220"
-                alt="prof_pic.pg">
-            <br>
-            <div id="name">Rey Sinabianan</div>
-
-        </div>
-        <br><br>
-        <!--Posting-->
-        <div style="display: flex;">
-            <div class="left_container">
-
-                Types of job you can work on.
-                <br><br><br>
-                <div class="job_type">
-                    <img src="https://image.freepik.com/free-icon/code_318-41701.jpg" alt="code.icon">
-                    Programming
-                </div>
-                <div class="job_type">
-                    <img src="https://tse2.mm.bing.net/th?id=OIP.XrGVljajcLZhvJGUD-Sc7gHaE7&pid=Api&P=0&h=220"
-                        alt="code.icon">
-                    Graphic Design
-                </div>
-                <div class="job_type">
-                    <img src="https://tse1.mm.bing.net/th?id=OIP.ajOZM5PCqcy_JyffZODgyQHaHa&pid=Api&P=0&h=220"
-                        alt="code.icon">
-                    Writing
-                </div>
-                <div class="job_type">
-                    <img src="https://tse4.mm.bing.net/th?id=OIP.ysDUOUMN8RoN80-L7-fOQQAAAA&pid=Api&P=0&h=220"
-                        alt="code.icon">
-                    Assignments
-                </div>
-
+    <div class="signup-container">
+        <h2>Sign Up</h2>
+        <form id="signupForm" onsubmit="redirectHome(event)">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" required>
             </div>
-            <!--post area-->
-            <div class="center_container">
-
-                <div class="post_box">
-
-                    <textarea placeholder="Post a project."></textarea>
-                    <input id="post_button" type="submit" value="Post">
-
-                </div>
-
-                <div id="post_bar">
-
-                    <div>
-                        <img src="https://tse2.mm.bing.net/th?id=OIP.yYUwl3GDU07Q5J5ttyW9fQHaHa&pid=Api&P=0&h=220"
-                            alt="prof_pic.pg">
-                    </div>
-                    <div id="post_content">
-                        <div id="post_name">Rey Sinabian</div>
-                        <br>
-                        I need help with a JavaScript code that can fetch weather data from an API and display it on a
-                        webpage.
-                        The code should take a city name as input and return the current weather details for that city.
-                        If anyone is available to work on this, please let me know.
-                    </div>
-
-                </div>
-
-                <div id="post_bar">
-
-                    <div>
-                        <img src="https://tse2.mm.bing.net/th?id=OIP.yYUwl3GDU07Q5J5ttyW9fQHaHa&pid=Api&P=0&h=220"
-                            alt="prof_pic.pg">
-                    </div>
-                    <div id="post_content">
-                        <div id="post_name">Rey Sinabian</div>
-                        <br>
-                        I need assistance with an assignment on machine learning. The assignment includes analyzing a
-                        dataset,
-                        implementing various algorithms, and presenting the results. If someone is knowledgeable in ML
-                        and can assist,
-                        please contact me.
-                    </div>
-
-                </div>
-
-                <div id="post_bar">
-
-                    <div>
-                        <img src="https://tse2.mm.bing.net/th?id=OIP.yYUwl3GDU07Q5J5ttyW9fQHaHa&pid=Api&P=0&h=220"
-                            alt="prof_pic.pg">
-                    </div>
-                    <div id="post_content">
-                        <div id="post_name">Rey Sinabian</div>
-                        <br>
-                        I'm looking for a creative designer to create a modern and professional logo for my startup.
-                        The company is called "TechNova" and specializes in tech gadgets. I would like a minimalist and
-                        futuristic design.
-                    </div>
-
-                </div>
-
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
             </div>
-            <!--<div class="right_container">
-            
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <div class="form-group">
+                <label for="confirm-password">Confirm Password</label>
+                <input type="password" id="confirm-password" name="confirm-password" required>
+            </div>
+            <button type="submit" class="signup-btn">Sign Up</button>
+            <div class="login-link">
+                Already have an account? <a href="#">Log in</a>
+            </div>
+        </form>
+    </div>
 
+    <script>
+        function redirectHome(event) {
+            event.preventDefault(); // Prevent actual form submission
+            window.location.href = 'home.html'; // Redirect to home.html
+        }
+    </script>
 
-        </div> -->
-        </div>
 </body>
-
 </html>
