--- a/home.html
+++ b/home.html
@@ -95,7 +95,7 @@
                             alt="prof_pic.pg">
                     </div>
                     <div id="post_content">
-                        <div id="post_name">Rey Sinabianan</div>
+                        <div id="post_name">Rey Sinabiananan</div>
                         <br>
                         I need assistance with an assignment on machine learning. The assignment includes analyzing a
                         dataset,
