--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
             <img id="prof_pic" src="https://tse2.mm.bing.net/th?id=OIP.yYUwl3GDU07Q5J5ttyW9fQHaHa&pid=Api&P=0&h=220"
                 alt="prof_pic.pg">
             <br>
-            <div id="name">Rey Sinabianan</div>
+            <div id="name">Rey Sinabiananan</div>
 
         </div>
         <br><br>
@@ -42,22 +42,22 @@
                 <br><br><br>
                 <div class="job_type">
                     <img src="https://image.freepik.com/free-icon/code_318-41701.jpg" alt="code.icon">
-                    Programming
+                    <a href="programming.html">Programming</a>
                 </div>
                 <div class="job_type">
                     <img src="https://tse2.mm.bing.net/th?id=OIP.XrGVljajcLZhvJGUD-Sc7gHaE7&pid=Api&P=0&h=220"
                         alt="code.icon">
-                    Graphic Design
+                    <a href="GraphicDesign.html">Graphic Design</a>
                 </div>
                 <div class="job_type">
                     <img src="https://tse1.mm.bing.net/th?id=OIP.ajOZM5PCqcy_JyffZODgyQHaHa&pid=Api&P=0&h=220"
                         alt="code.icon">
-                    Writing
+                   <a href="Writing.html"> Writing</a>
                 </div>
                 <div class="job_type">
                     <img src="https://tse4.mm.bing.net/th?id=OIP.ysDUOUMN8RoN80-L7-fOQQAAAA&pid=Api&P=0&h=220"
                         alt="code.icon">
-                    Assignments
+                    <a href="assignment.html">Assignments</a>
                 </div>
 
             </div>
