--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
         <div style="display: flex;">
             <div class="left_container">
 
-                Types of job you can work on.
+                Types of jobs:
                 <br><br><br>
                 <div class="job_type">
                     <img src="https://image.freepik.com/free-icon/code_318-41701.jpg" alt="code.icon">
