--- a/programming.html
+++ b/programming.html
@@ -6,11 +6,11 @@
     <title>Programming Jobs - Side Quest</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Programming Jobs</h1>
-    <p>Explore freelance and part-time programming opportunities. Some examples include:</p>
-    <ul>
-        <li>Web Development</li>
+<body class="Pbody">
+    <h1 class="Ph1">Programming Jobs</h1>
+    <p class="Pp">Explore freelance and part-time programming opportunities. Some examples include:</p>
+    <ul class="Pul">
+        <li class="Pli">Web Development</li>
         <li>Mobile App Development</li>
         <li>Software Engineering</li>
         <li>Data Science</li>
