--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -6,11 +6,11 @@
     <title>Graphic Design Jobs - Side Quest</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Graphic Design Jobs</h1>
-    <p>Find projects requiring creative graphic design skills, including:</p>
-    <ul>
-        <li>Logo and Branding Design</li>
+<body class="Gbody">
+    <h1 class="Gh1">Graphic Design Jobs</h1>
+    <p class="Gp">Find projects requiring creative graphic design skills, including:</p>
+    <ul class="Gul">
+        <li class="Gli">Logo and Branding Design</li>
         <li>UI/UX Design</li>
         <li>Illustrations</li>
         <li>Social Media Graphics</li>
