--- a/assignment.html
+++ b/assignment.html
@@ -6,11 +6,11 @@
     <title>Assignment Assistance - Side Quest</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Assignment Assistance</h1>
-    <p>Get help with academic assignments in subjects like:</p>
-    <ul>
-        <li>Mathematics</li>
+<body class="Abody">
+    <h1 class="Ah1">Assignment Assistance</h1>
+    <p class="Ap">Get help with academic assignments in subjects like:</p>
+    <ul class="Aul">
+        <li class="Ali">Mathematics</li>
         <li>Science</li>
         <li>Computer Science</li>
         <li>Business Studies</li>
