--- a/Writing.html
+++ b/Writing.html
@@ -6,11 +6,11 @@
     <title>Writing Jobs - Side Quest</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Writing Jobs</h1>
-    <p>Opportunities for writers, including roles in:</p>
-    <ul>
-        <li>Content Writing</li>
+<body class="Wbody">
+    <h1 class="Wh1">Writing Jobs</h1>
+    <p class="Wp">Opportunities for writers, including roles in:</p>
+    <ul class="Wul">
+        <li class="Wli">Content Writing</li>
         <li>Copywriting</li>
         <li>Technical Writing</li>
         <li>Blogging</li>
