--- a/signup.html
+++ b/signup.html
@@ -3,27 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Log in </title>
+    <title>Sign Up </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div class="signup-container">
-        <h2>Log in</h2>
+        <h2>Sign Up</h2>
         <form id="signupForm" onsubmit="redirectHome(event)">
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" required>
             </div>
-       
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
             <div class="form-group">
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
             </div>
-    
-            <button type="submit" class="signup-btn">Log in</button>
+            <div class="form-group">
+                <label for="confirm-password">Confirm Password</label>
+                <input type="password" id="confirm-password" name="confirm-password" required>
+            </div>
+            <button type="submit" class="signup-btn">Sign Up</button>
             <div class="login-link">
-                Create an account? <a href="#" onclick="window.location.href='signup.html'">Create</a>
+                Already have an account? <a href="#">Log in</a>
             </div>
         </form>
     </div>
