--- a/signup.html
+++ b/signup.html
@@ -3,14 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up </title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .form-group {
+            margin-bottom: 15px;
+        }
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+        }
+        .form-group select, .form-group input {
+            width: 100%;
+            padding: 8px;
+            box-sizing: border-box;
+        }
+    </style>
 </head>
 <body>
 
     <div class="signup-container">
         <h2>Sign Up</h2>
-        <form id="signupForm" onsubmit="redirectHome(event)">
+        <form id="signupForm" onsubmit="handleSignUp(event)">
+            <div class="form-group">
+                <label for="role">I am a:</label>
+                <select id="role" name="role" required>
+                    <option value="" disabled selected>Select your role</option>
+                    <option value="Student">Student</option>
+                    <option value="Faculty">Faculty</option>
+                </select>
+            </div>
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" required>
@@ -29,15 +51,30 @@
             </div>
             <button type="submit" class="signup-btn">Sign Up</button>
             <div class="login-link">
-                Already have an account? <a href="#">Log in</a>
+                Already have an account? <a href="login.html">Log in</a>
             </div>
         </form>
     </div>
 
     <script>
-        function redirectHome(event) {
-            event.preventDefault(); // Prevent actual form submission
-            window.location.href = 'home.html'; // Redirect to home.html
+        // Handle form submission
+        function handleSignUp(event) {
+            event.preventDefault(); // Prevent form submission
+            
+            // Get selected role
+            const role = document.getElementById('role').value;
+
+            if (!role) {
+                alert('Please select your role before signing up.');
+                return;
+            }
+
+            // Redirect based on role
+            if (role === 'Student') {
+                window.location.href = 'home.html'; // Redirect to student homepage
+            } else if (role === 'Faculty') {
+                window.location.href = 'faculty.html'; // Redirect to faculty homepage
+            }
         }
     </script>
 
