--- a/faculty.html
+++ b/faculty.html
@@ -41,31 +41,7 @@
         <br><br>
         <!--Posting-->
         <div style="display: flex;">
-            <div class="left_container" class="c2">
-
-                Types of jobs:
-                <br><br><br>
-                <div class="job_type" onclick="window.location.href='programming.html'">
-                    <img src="https://image.freepik.com/free-icon/code_318-41701.jpg" alt="code.icon">
-                    <a href="programming.html" style="text-decoration: none; color: inherit;">Programming</a>
-                </div>
-                <div class="job_type" onclick="window.location.href='GraphicDesign.html'">
-                    <img src="https://tse2.mm.bing.net/th?id=OIP.XrGVljajcLZhvJGUD-Sc7gHaE7&pid=Api&P=0&h=220"
-                        alt="code.icon">
-                    <a href="GraphicDesign.html" style="text-decoration: none; color: inherit;">Graphic Design</a>
-                </div>
-                <div class="job_type" onclick="window.location.href='Writing.html'">
-                    <img src="https://tse1.mm.bing.net/th?id=OIP.ajOZM5PCqcy_JyffZODgyQHaHa&pid=Api&P=0&h=220"
-                        alt="code.icon">
-                   <a href="Writing.html" style="text-decoration: none; color: inherit;"> Writing</a>
-                </div>
-                <div class="job_type" onclick="window.location.href='assignment.html'">
-                    <img src="https://tse4.mm.bing.net/th?id=OIP.ysDUOUMN8RoN80-L7-fOQQAAAA&pid=Api&P=0&h=220"
-                        alt="code.icon">
-                    <a href="assignment.html" style="text-decoration: none; color: inherit;">Assignments</a>
-                </div>
-
-            </div>
+            
             <!--post area-->
             <div class="center_container" class="c2">
 
@@ -132,7 +108,7 @@
 
         <section id="workspace" class="container section" style="display: none;">
             <h2>Workspace</h2>
-            <p>Your accepted jobs will appear here. Start working on them!</p>
+            <p>The jobs that has been accepted will appear here. Start working on them!</p>
             <ul id="accepted-jobs-list">
                 <!-- Accepted jobs will be added here dynamically -->
             </ul>
